Fix min height on body causing overflows

--- a/packages/website/src/global.css
+++ b/packages/website/src/global.css
@@ -11,6 +11,8 @@
 
 body {
   background-color: white;
+  width: 100vw;
+  min-height: 100vh;
 }
 
 .layout {
